--- a/assets/css/counter.css
+++ b/assets/css/counter.css
@@ -65,6 +65,12 @@
   color: #3EAB90;
   text-align: center;
 }
+@media screen and (max-width: 991px) {
+  .counter_section h2 {
+    font-size: 30px;
+    line-height: 44px;
+  }
+}
 .counter_section p {
   font-size: 16px;
   font-weight: 300;
@@ -78,7 +84,7 @@
     line-height: 24px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .counter_section p br {
     display: none;
   }
@@ -93,6 +99,13 @@
   line-height: 60px;
   text-align: center;
   color: #FFFFFF;
+  text-shadow: 0 0 15px rgba(0, 255, 227, 0.14), 0 0 20px rgba(0, 255, 227, 0.11), 0 0 40px rgba(0, 255, 203, 0.52), 0 0 10px rgba(0, 255, 211, 0.51);
+}
+@media screen and (max-width: 991px) {
+  .counter_section #counter span {
+    font-size: 18px;
+    line-height: 26px;
+  }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .counter_section #counter span {
@@ -103,7 +116,6 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  border-right: 1px solid;
   border-color: -moz-linear-gradient(top, #FFFFFF, #3EAB90);
   position: relative;
 }
@@ -112,6 +124,12 @@
 }
 .counter_section #counter .col-lg-3:last-child:before {
   background: unset;
+}
+@media screen and (max-width: 991px) {
+  .counter_section #counter .col-lg-3 {
+    width: 50%;
+    padding: 15px 0px;
+  }
 }
 .counter_section #counter .col-lg-3::before {
   content: "";
@@ -135,10 +153,16 @@
   font-weight: 700;
   font-weight: bolder;
   color: #FFFFFF;
-  background-image: linear-gradient(180deg, #FFFFFF 0%, #3EAB90 100%);
+  background-image: linear-gradient(180deg, #3EAB90 0%, #3EAB90 100%);
+  text-shadow: 0 0 15px rgba(0, 255, 227, 0.14), 0 0 20px rgba(0, 255, 227, 0.11), 0 0 40px rgba(0, 255, 203, 0.52), 0 0 10px rgba(0, 255, 211, 0.51);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+@media screen and (max-width: 991px) {
+  .counter_section #counter .count {
+    font-size: 30px;
+  }
 }
 .counter_section #counter .count.percent_1:after {
   content: "+";
