--- a/assets/css/playstore.css
+++ b/assets/css/playstore.css
@@ -79,6 +79,13 @@
     text-align: center;
   }
 }
+@media (min-width: 992px) and (max-width: 1300px) {
+  .play_store_section h2 {
+    font-size: 36px;
+    line-height: 46px;
+    text-align: left;
+  }
+}
 .play_store_section ul {
   padding: 0;
   margin: 10px 20px 20px;
@@ -88,6 +95,11 @@
   color: #dfb946;
   font-size: 14px;
   font-weight: 400;
+}
+@media (max-width: 991px) {
+  .play_store_section ul {
+    list-style: none;
+  }
 }
 .play_store_section p {
   font-size: 14px;
@@ -162,14 +174,14 @@
   display: inline-block;
   border-radius: 30px;
   background-color: #000000;
-  color: #3EAB90;
+  color: #3eab90;
   text-align: center;
   font-size: 18px;
   padding: 10px 20px;
   transition: all 0.3s;
   box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.06);
   text-decoration: none;
-  border: 1px solid #3EAB90;
+  border: 1px solid #3eab90;
 }
 .play_store_section .play_store_left .start_now_btn .dedcription-btn .btn-icon {
   background-color: #ffffff;
@@ -215,7 +227,7 @@
   color: #ffffff;
 }
 .play_store_section .play_store_left .start_now_btn .dedcription-btn:hover {
-  color: #3EAB90 !important;
+  color: #3eab90 !important;
 }
 .play_store_section .play_store_left .start_now_btn .hover-box {
   display: flex;
