--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -6,6 +6,11 @@
     transform: translateX(50%);
   }
 }
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
 .fz-blog {
   background-color: #000000;
 }
