--- a/assets/css/developer.css
+++ b/assets/css/developer.css
@@ -6,6 +6,11 @@
     transform: translateX(50%);
   }
 }
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
 .developer_section {
   background-color: #000000;
   padding: 60px 0px 100px;
