--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -6,6 +6,11 @@
     transform: translateX(50%);
   }
 }
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
 .faq_section {
   background-color: #000000;
   padding: 80px 0px;
