--- a/assets/css/newsletter.css
+++ b/assets/css/newsletter.css
@@ -6,6 +6,11 @@
     transform: translateX(50%);
   }
 }
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
 .newsletter_section {
   background-color: #000000;
   text-align: center;
