--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -3,339 +3,182 @@
 .fz_product_sec {
   position: relative;
   z-index: 0;
-  .fz_container {
-    background-color: $tertiary-color;
+
+  .container {
     display: flex;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    overflow: hidden;
-    @media only screen and (max-width: 1200px) {
-      display: block;
-    }
-    @keyframes animateBg {
-      0% {
-        background-position: 0% 0%;
-      }
-      100% {
-        background-position: 0% 100%;
-      }
-    }
-    @mixin anim-global {
-      animation: animateBg 11s linear infinite;
-      background-size: 100% 300%;
-    }
-    .item-1 {
-      @include anim-global;
-      // background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
-      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10 57 58) 100%);
-      // background-image: linear-gradient(
-      //   0deg,
-      //   #18273a,
-      //   #003224,
-      //   #18273a,
-      //   #003224
-      // );
-    }
-    .item-2 {
-      @include anim-global;
-      // background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
-      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10 57 58) 100%);
-
-      // background-image: linear-gradient(
-      //   0deg,
-      //   #01391f,
-      //   #0b3638,
-      //   #01391f,
-      //   #0b3638
-      // );
-    }
-    .item-3 {
-      @include anim-global;
-      // background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
-      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10 57 58) 100%);
-
-      // background-image: linear-gradient(
-      //   0deg,
-      //   #013a34,
-      //   #2e3301,
-      //   #013a34,
-      //   #2e3301
-      // );
-    }
-    .item-4 {
-      @include anim-global;
-      // background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
-      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10 57 58) 100%);
-      // background-image: linear-gradient(
-      //   0deg,
-      //   #373f01,
-      //   #012949,
-      //   #373f01,
-      //   #012949
-      // );
-    }
-    .item-5 {
-      @include anim-global;
-      // background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
-      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10 57 58) 100%);
-      // background-image: linear-gradient(
-      //   0deg,
-      //   #18273a,
-      //   #003224,
-      //   #18273a,
-      //   #003224
-      // );
-    }
-    .dot-nav-position-right {
-      position: absolute;
-      bottom: 18px;
-      z-index: 9999;
-      @media only screen and (max-width: 1200px) {
-        display: none;
-      }
-      .dot-nav {
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-        width: 100vw;
-        li {
-          list-style: none;
-          margin: 0 5px;
-          cursor: pointer;
-          &.is-active span {
-            transition: all 0.5s ease-in;
-            border: 0px;
-            background: rgb(21 221 172);
-            opacity: 1;
-          }
-          span {
-            display: inline-block;
-            width: 25px;
-            height: 4px;
-            border-radius: 3px;
-            transition: all 0.5s ease-in;
-            background: rgb(21 221 172);
-            opacity: 0.2;
-          }
-        }
-      }
-    }
-    .fz_sub_container {
+    justify-content: space-between;
+    .fz_product_left {
       display: flex;
-      align-items: center;
-      height: 100vh;
-      gap: 260px;
-      padding: 0px 100px;
-      @media only screen and (max-width: 1600px) {
-        gap: 160px;
-      }
-      @media only screen and (max-width: 1440px) {
-        gap: 94px;
-        padding: 92px 60px;
-      }
-      @media only screen and (max-width: 1200px) {
-        gap: 24px;
-        padding: 30px 16px 76px 16px;
-        height: auto;
-      }
-      @media only screen and (max-width: 720px) {
-        display: block;
-        gap: 16px;
-        height: auto;
-      }
-      .fz_content {
-        position: relative;
-        width: 620px;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 120px;
+      gap: 24px;
+      .fz_sub_container {
+        display: flex;
+        height: 100vh;
         @media only screen and (max-width: 1200px) {
-          width: 100%;
+          height: auto;
+          flex-direction: column;
+          gap: 24px;
         }
-        // &:after {
-        //   content: "";
-        //   position: absolute;
-        //   width: 676px;
-        //   height: 676px;
-        //   top: 5px;
-        //   left: -12px;
-        //   background-color: #20918182;
-        //   border-radius: 50%;
-        //   filter: blur(152px);
-        //   transform: translate3d(0, 0, 0);
-        //   z-index: -1;
-        // }
-        .fz_num {
-              display: inline-flex;
-              align-items: flex-start;
-              justify-content: flex-start;
-              flex-direction: column;
-          h3 {
-            line-height: 75px;
-            font-size: 128px;
-            font-weight: 600;
-            color: #ffffff;
+        .fz_content {
+          position: relative;
+          width: 620px;
+
+          @media only screen and (max-width: 1200px) {
+            width: 100%;
+          }
+          .fz_num {
+            display: flex;
+            transition: all 0.5s ease-in;
+            h2 {
+              font-family: "Montserrat", sans-serif;
+              font-size: 128px;
+              font-weight: 600;
+              color: $white;
+              padding-top: 18px;
+              margin: 0;
+              @media only screen and (max-width: 1200px) {
+                font-size: 104px;
+                padding-top: 13px;
+              }
+            }
+          }
+          .fz_title_content {
             display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-direction: column;
+
+            h3 {
+              line-height: 75px;
+              font-size: 128px;
+              font-weight: 600;
+              color: #ffffff;
+              display: inline-flex;
+              align-items: center;
+              justify-content: center;
+              margin: 0;
+
+              @media screen and (max-width: 1200px) {
+                font-size: 80px;
+              }
+            }
+          }
+
+          .fz_title {
+            font-size: 36px;
+            font-weight: 700;
+            line-height: 49px;
+            color: #34b195;
+            padding-bottom: 2px;
+          }
+
+          .fz_subtitle {
+            font-size: 12px;
+            font-weight: 200;
+            line-height: 26px;
+            color: #f8d796;
+            border: 1px solid #f7c35f3b;
+            border-radius: 20px;
+            background: #19875408;
+            display: inline-flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            padding: 5px 20px;
+            margin-bottom: 0px;
 
             @media screen and (max-width: 1200px) {
-              font-size: 80px;
+              line-height: 40px;
             }
           }
-        }
-        .fz_title {
-          font-size: 36px;
-          font-weight: 700;
-          line-height: 49px;
-          color: #34b195;
-          padding-bottom: 2px;
-        }
-        .fz_subtitle {
-          font-size: 12px;
-          font-weight: 200;
-          line-height: 26px;
-          color: #f8d796;
-          border: 1px solid #f7c35f3b;
-          border-radius: 20px;
-          background: #19875408;
-          display: inline-flex;
-          align-items: flex-start;
-          justify-content: flex-start;
-          padding: 5px 20px;
-          margin-bottom: 0px;
 
-          @media screen and (max-width: 1200px) {
-            line-height: 40px;
+          .fz_bank {
+            font-size: 20px;
+            font-weight: 400;
+            color: #ffffff;
+            padding-bottom: 15px;
+            line-height: 30px;
+            letter-spacing: 0.25px;
           }
-        }
-        .fz_bank {
-          font-size: 20px;
-          font-weight: 400;
-          color: #ffffff;
-          padding-bottom: 15px;
-          line-height: 30px;
-          letter-spacing: 0.25px;
-        }
-        .fz_desc {
-          font-size: 14px;
-          font-weight: 300;
-          color: #ffffff;
-          padding-bottom: 26px;
-          line-height: 26px;
-          letter-spacing: 0.25px;
-        }
-        .fz_btn button {
-          @include primaryBg;
-          font-size: 16px;
-          font-weight: 400;
-          padding: 15px 20px;
-          border-radius: 32px;
-          border: none;
-          cursor: pointer;
-          position: relative;
-          overflow: hidden;
-          display: flex;
-          width: 180px;
-          &:hover {
-            background-image: linear-gradient(180deg, #3eab90 0%, #003224 100%);
+
+          .fz_desc {
+            font-size: 14px;
+            font-weight: 300;
+            color: #ffffff;
+            padding-bottom: 26px;
+            line-height: 26px;
+            letter-spacing: 0.25px;
           }
-          .hero-join {
-            @include hero-join;
-          }
-          &:hover {
+
+          .fz_btn button {
+            @include primaryBg;
+            font-size: 16px;
+            font-weight: 400;
+            padding: 15px 20px;
+            border-radius: 32px;
+            border: none;
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+            display: flex;
+            width: 180px;
+
+            &:hover {
+              background-image: linear-gradient(180deg, #3eab90 0%, #003224 100%);
+            }
+
             .hero-join {
-              bottom: 12px;
+              @include hero-join;
             }
-          }
-        }
-      }
-      .fz_img-sec {
-        position: relative;
-        // &::after {
-        //   content: "";
-        //   position: absolute;
-        //   width: 366px;
-        //   height: 330px;
-        //   top: 290px;
-        //   right: 50px;
-        //   background: #24a7af;
-        //   filter: blur(212px);
-        //   transform: translate3d(0, 0, 0);
-        // }
-        @media screen and (max-width: 767px) {
-          margin-top: 30px;
-        }
-        .fz_img {
-          position: relative;
-          .image_1 {
-            opacity: 0.3;
-            @media only screen and (max-width: 1200px) {
-              width: 100%;
-              // height: 100%;
-            }
-          }
-          img,
-          object,
-          svg,
-          embed,
-          video {
-            &:last-child {
-              position: absolute;
-              left: 50%;
-              top: 50%;
-              transform: translate(-50%, -50%);
-              min-width: 75%;
-              width: 75%;
 
-              @media only screen and (max-width: 1200px) {
-                width: 100%;
-                margin-top: 10px;
+            &:hover {
+              .hero-join {
+                bottom: 12px;
               }
             }
           }
         }
       }
+
+      .fz_img {
+        display: none;
+
+        @media screen and (max-width: 1200px) {
+          display: block;
+        }
+      }
+    }
+
+    .fz_product_right {
+      display: flex;
+      justify-content: flex-end;
+      padding-top: 120px;
+
+      @media screen and (max-width: 1200px) {
+        display: none;
+      }
+
+      .fz_product_images {
+        width: 525px;
+        height: 525px;
+        position: relative;
+        @media screen and (max-width: 1400px) {
+          width: 450px;
+          height: 450px;
+        }
+        .fz_product_image {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          box-shadow: #0c83e7;
+
+          video {
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
     }
   }
-}
-
-.bnt-glow a {
-  position: relative;
-  display: inline-block;
-  margin: 0;
-  padding: 1px 0px;
-  color: #fff;
-  text-decoration: none;
-  box-shadow: 0 0 5px 0 var(--color);
-  transition: linear 0.3s;
-  border-radius: 30px;
-  font-weight: 700;
-  width: 5px;
-  height: 300px;
-  background-color: #4dd0b1;
-  border-radius: 10px;
-  box-shadow: 0 0 40px 10px #4dd0b1;
-}
-
-.bnt-glow a:hover {
-  color: #000;
-  background-color: #1dc0dd;
-  border-radius: 10px;
-  box-shadow: 0 0 40px 10px #1dc0dd;
-}
-
-.bnt-glow a::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 50%;
-  left: 0;
-  background-color: #4dd0b1;
-  transform: perspective(0.6em) rotateX(50deg) scale(1, 0.6);
-  filter: blur(0.3em);
-  opacity: 1;
-  transition: linear 0.3s;
-}
-.bnt-glow a:hover::after {
-  opacity: 1;
 }
